--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2122,7 +2122,7 @@ input, select, textarea {
 		padding: 0 2.5em;
 		text-overflow: ellipsis;
 		overflow: hidden;
-		margin: 5px;
+		margin-bottom: 5px;
 	}
 
 		input[type="submit"].icon:before,
